1.0.9: 2001-05-21
!!!	- bugfix: limitSize still was broken (Max Kirillov)
!!!	- experimental feature: antialiasing (for images only at this moment);
		  configure with --enable-antialiasing
!!!	- feature: Move/Resize FX (experimental bloat);
		  setup with MoveSizeFX option (bitmask);
		  configure with --enable-movesize-fx
!	- feature: icon tray (Jan Krupa)
		  options: TaskBarShowTray, TaskBarTrayDrawBevel
		  window option: tray (Ignore: no icon on tray (default);
		    Minimized: icon on tray and if not minimized also
		    on task pane; Exclusive: icon on tray only (and not on 
		    task pane))
	- bugfix: renamed START_PIXMAP from linux.xpm to icewm.xpm
	- bugfix: #427048 compatibility issues in Makefile.in
	- bugfix: ellipsis for long labels on mini icons
	- feature: pixmap for workspace buttons: create a "workspace"
		  subdirectory and name your workspaces accordingly to the
		  pixmaps in this directory
	- feature: allow transparent menu selection (ColorActiveMenuItem="")
	- feature/bugfix: support taskbar/taskbarbutton* pixmap for all 
		  pixmap looks (not only gtk)
	- feature/bugfix: corner pixmap can have another size than specified
		  by CornerSizeX/Y now
	- feature: more specific widget setup
		 (pixmaps: buttonI.xpm, buttonA.xpm, listbg.xpm, dialogbg.xpm, 
		    taskbar/toolbuttonbg.xpm, taskbar/workspacebuttonbg.xpm
		    taskbar/workspacebuttonactive.xpm;
		  colors: ColorToolButton, ColorToolButtonText, 
		    ColorActiveWorkspaceButton, ColorActiveWorkspaceButtonText,
		    ColorNormalWorkspaceButton, ColorNormalWorkspaceButtonText;
		  fonts: ToolButtonFontName, ActiveWorkspaceFontName,
		    NormalWorkspaceFontName)
	- experimental feature: gradient support
		  the option "Gradients" lists the pixmaps to scale;
		  titlebar gradients can be adjusted with
		  TitleBarJoinLeft and TitleBarJoinRight;
		  configure with --enable-gradients
	- feature: transparent applets (clock, net/cpu status):